--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,7 +99,17 @@ nav:
       - Autolykos: mining/autolykos.md
     - Resources:
       - Documents: documents.md
-      - EIPs: dev/protocol/eip.md
+      - EIPs:
+        - What is an EIP?: dev/protocol/eip.md
+        - UTXO-Set Scanning Wallet API: dev/wallet/standards/eip1.md
+        - Deterministic Wallet Standard: dev/wallet/standards/eip3.md
+        - Asset Standard: dev/tokens/standards/eip4.md
+        - Cold Wallet: dev/wallet/standards/eip19.md
+        - Geniune Token Verification: dev/tokens/standards/eip21.md
+        - Proxy Contracts: dev/wallet/payments/standards/eip17.md
+        - ErgoPay Protocol: dev/wallet/payments/standards/eip20.md
+        - Payment Request URI: dev/wallet/payments/standards/eip25.md
+
       - Audit: dev/protocol/audit.md
       - Social Contract: social_contract.md
       - Key Sites:
@@ -164,6 +174,25 @@ nav:
       - Standards:
         - EIP-4 Asset Standard: dev/tokens/standards/eip4.md
         - EIP-21 Geniune Token Verification: dev/tokens/standards/eip21.md
+    - Programming Languages:
+      - What language should I use?: dev#getting-started
+      - Scala: dev/lang/scala.md
+      - Java: dev/lang/java.md
+      - Kotlin: dev/lang/kotlin.md
+      - Rust: dev/lang/rust.md
+      - Python: dev/lang/python.md
+      - C#: dev/lang/csharp.md
+      - JS: dev/lang/js.md
+    - Frameworks & Toolkits:
+      - What framework should I use?: dev#getting-started
+      - AppKit:
+        - AppKit: dev/stack/appkit/appkit.md
+        - Tutorial: dev/stack/appkit/tutorial.md
+        - Gradle: dev/stack/appkit/gradle.md
+      - Mosaik: dev/stack/mosaik/intro.md
+      - JSON dApp Environment: dev/stack/jde.md
+      - Headless dApp Framework: dev/stack/headless.md
+      - Fleet JS Toolkit: dev/stack/fleet.md
     - Smart Contracts:
       - Smart Contracts: dev/scs/index.md
       - ErgoScript: 
@@ -174,42 +203,24 @@ nav:
         - Debugging: dev/scs/debugging.md
       - FlowCards: dev/scs/flowcards.md
       - ErgoTree: dev/scs/ergotree.md
-    - Languages:
-      - Scala: dev/lang/scala.md
-      - Java: dev/lang/java.md
-      - Kotlin: dev/lang/kotlin.md
-      - Rust: dev/lang/rust.md
-      - Python: dev/lang/python.md
-      - C#: dev/lang/csharp.md
-      - JS: dev/lang/js.md
-    - Libraries:
-      - AppKit:
-        - AppKit: dev/stack/appkit/appkit.md
-        - Tutorial: dev/stack/appkit/tutorial.md
-        - Gradle: dev/stack/appkit/gradle.md
-      - Mosaik: dev/stack/mosaik/intro.md
       - Kiosk: dev/stack/kiosk.md
-      - JDE: dev/stack/jde.md
-      - Assembler: dev/stack/assembler.md
-      - HDF: dev/stack/headless.md
-      - ErgoTool: dev/stack/ergotool.md
-    - Tooling:
-      - Mosaik: 
-        - Introduction: dev/stack/mosaik/intro.md
-        - A simple UI: dev/stack/mosaik/tutorial2.md
-        - Processing data: dev/stack/mosaik/tutorial3.md
-        - ErgoPay: dev/stack/mosaik/tutorial4.md
-        - Web UI: dev/stack/mosaik/tutorial5.md
-        - Deployment: dev/stack/mosaik/mosaik-docker-flux.md
-        - Example apps: dev/stack/mosaik/examples.md
+  
+    - Payments: 
       - ErgoPay:
         - ErgoPay: dev/wallet/payments/ergopay/ergo-pay.md
         - Tutorial: dev/wallet/payments/ergopay/ep-tutorial.md
       - dApp Connector: dev/wallet/payments/dApp.md
-      - Proxy Contracts: dev/wallet/payments/proxy.md
+      - Proxy Contracts:
+        - Proxy Contracts: dev/wallet/payments/proxy.md
+        - Assembler: dev/stack/assembler.md
+      - Standards:
+        - Proxy Contracts: dev/wallet/payments/standards/eip17.md
+        - ErgoPay Protocol: dev/wallet/payments/standards/eip20.md
+        - Payment Request URI: dev/wallet/payments/standards/eip25.md
+    - Resources: 
       - Off-Chain:
         - Oracle-Core: dev/oc/oracle.md
-    - Resources: 
+      - ErgoTool: dev/stack/ergotool.md
       - Bookmarks: dev/start/resources.md
       - Tutorials: 
         - Pi Blockchain Explorer: dev/stack/rpi-blockchain-explorer.md
@@ -217,8 +228,11 @@ nav:
       - Wallets:
         - Software: dev/wallet/wallets.md
         - Ledger: dev/wallet/payments/ledger.md
-    
-
+        - Standards:
+          - UTXO-Set Scanning Wallet API: dev/wallet/standards/eip1.md
+          - Deterministic Wallet Standard: dev/wallet/standards/eip3.md
+          - Cold Wallet: dev/wallet/standards/eip19.md
+     
 
   - 💡 ┃  Applications:
     - Explore:
@@ -230,6 +244,9 @@ nav:
         - NFTs: uses/nft.md
         - Mixing: uses/mixer.md
         - CrowdFunding: uses/crowdfunding.md
+        - Gaming: uses/gaming.md
+        - Metaverse: uses/metaverse.md
+
       #- ErgoRaffle: uses/raffle.md
       - In Development:
         - ProfitSharing: uses/profit.md
@@ -237,31 +254,34 @@ nav:
         - Index Coins: uses/index_coins.md
         - Lending: uses/lending.md
         - Zero-Knowledge: uses/zk.md
-      - Planned:
-        - Asset Tokenisation: uses/tokenisation.md
-        - DAO: uses/dao.md
+        - DAOs: uses/dao.md       
+        - Grid Trading: uses/grid_trading.md
+      - Ideas & Discussion:
         - Buy Back Guarantees: uses/dex-buyback.md
         - LETS: uses/lets.md
-        - Trustlss LETS: uses/trustless-lets.md
-        - Email Client for Blocked Internet: uses/blocked_web.md
+        - Trustless LETS: uses/trustless-lets.md
         - Atomic Swaps: dev/protocol/atomic.md
         - ErgoData: uses/ErgoData.md
-      - Further Ideas:
-     #  - CDBC: uses/cbdc.md
+        - Email Client for Blocked Internet: uses/blocked_web.md
         - Lotteries: uses/lottery.md
         - Insurance: uses/insurance.md
         - Derivatives: uses/deriv.md
+        - P2P Options Contract: uses/p2p_options.md
+        - ChainCash: uses/chaincash.md
         - Yield Aggregation: uses/yield.md
         - Micro Credit: dev/scs/microcredit.md
-        - Math Fun: uses/math_fun.md
         - PoW Tokens: uses/PoW_tokens.md
-        - Collateral Mining: uses/collateral-mining.md
         - Mutual Credit: uses/mutual_credit.md
         - Prediction Markets: uses/prediction_markets.md
-       # - Privacy: uses/privacy.md
         - Perpetual Tokens: uses/perpetual.md
         - Bonding Curve: uses/bonding.md
-        - Context Claims: uses/context-claims.md
+       # - Context Claims: uses/context-claims.md
+      #  - Asset Tokenisation: uses/tokenisation.md
+       # - Privacy: uses/privacy.md
+      #  - Collateral Mining: uses/collateral-mining.md
+      #  - Math Fun: uses/math_fun.md
+     #  - CDBC: uses/cbdc.md
+
 
 
 
