--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -156,35 +156,45 @@ nav:
           - Network Messages: dev/p2p/network.md
           # - Modifiers Exchange: dev/p2p/modifiers.md
           # - BlockP2P: dev/p2p/BlockP2P.md
-    
-    - Data Model:
-      - Transactions: 
-        - Transactions: dev/protocol/transaction.md
-        - Model Transaction: dev/protocol/model-tx.md
+    - Anatomy:
       - Box:
         - Box: dev/data-model/box/index.md
         - Registers: dev/data-model/box/registers.md
-      - Block: dev/data-model/block.md
+      - Tokens:
+        - Create a token: dev/tokens/issue.md
+        - Burning a token: dev/tokens/burn.md
+        - Standards:
+          - Asset Standard: dev/tokens/standards/eip4.md
+          - Geniune Token Verification: dev/tokens/standards/eip21.md
+      - Transactions: 
+        - Transactions: dev/protocol/transaction.md
+        - Model Transaction: dev/protocol/model-tx.md
+        - Composing Transactions: 
+          - ErgoPay:
+            - ErgoPay: dev/wallet/payments/ergopay/ergo-pay.md
+            - Tutorial: dev/wallet/payments/ergopay/ep-tutorial.md
+          - dApp Connector: dev/wallet/payments/dApp.md
+          - Proxy Contracts:
+            - Proxy Contracts: dev/wallet/payments/proxy.md
+            - Assembler: dev/stack/assembler.md
+          - Standards:
+            - Proxy Contracts: dev/wallet/payments/standards/eip17.md
+            - ErgoPay Protocol: dev/wallet/payments/standards/eip20.md
+            - Payment Request URI: dev/wallet/payments/standards/eip25.md
+          - Data Inputs: dev/scs/data-inputs.md
+          - ErgoTool: dev/stack/ergotool.md
+
       - Addresses: dev/wallet/address.md
-      - Data Inputs: dev/scs/data-inputs.md
+      - Block: dev/data-model/block.md
+      - Wallets:
+        - Software: dev/wallet/wallets.md
+        - Ledger: dev/wallet/payments/ledger.md
+        - Integration: dev/Integration/guide.md
+        - Standards:
+          - UTXO-Set Scanning Wallet API: dev/wallet/standards/eip1.md
+          - Deterministic Wallet Standard: dev/wallet/standards/eip3.md
+          - Cold Wallet: dev/wallet/standards/eip19.md
       #- UTXO-State: 
-    - Tokens:
-      - Create a token: dev/tokens/issue.md
-      - Standards:
-        - EIP-4 Asset Standard: dev/tokens/standards/eip4.md
-        - EIP-21 Geniune Token Verification: dev/tokens/standards/eip21.md
-    - Payments: 
-      - ErgoPay:
-        - ErgoPay: dev/wallet/payments/ergopay/ergo-pay.md
-        - Tutorial: dev/wallet/payments/ergopay/ep-tutorial.md
-      - dApp Connector: dev/wallet/payments/dApp.md
-      - Proxy Contracts:
-        - Proxy Contracts: dev/wallet/payments/proxy.md
-        - Assembler: dev/stack/assembler.md
-      - Standards:
-        - Proxy Contracts: dev/wallet/payments/standards/eip17.md
-        - ErgoPay Protocol: dev/wallet/payments/standards/eip20.md
-        - Payment Request URI: dev/wallet/payments/standards/eip25.md
     - Programming Languages:
       - What language should I use?: dev#getting-started
       - Scala: dev/lang/scala.md
@@ -204,7 +214,13 @@ nav:
       - JSON dApp Environment: dev/stack/jde.md
       - Headless dApp Framework: dev/stack/headless.md
       - Fleet JS Toolkit: dev/stack/fleet.md
+    - Explorer & APIs: 
+      - Explorer: dev/stack/explorer/explorer.md
+      - Local Setup: dev/stack/explorer/explorer_local.md
+      - GraphQL: dev/stack/explorer/graphql.md
+      - Pi Blockchain Explorer: dev/stack/rpi-blockchain-explorer.md
     - Smart Contracts:
+      - Creating a simple P2S app: dev/scs/p2s.md
       - Smart Contracts: dev/scs/index.md
       - ErgoScript: 
         - Overview: dev/scs/ergoscript.md
@@ -216,23 +232,10 @@ nav:
       - Multi-Stage Contracts: dev/scs/multi.md 
       - ErgoTree: dev/scs/ergotree.md
       - Kiosk: dev/stack/kiosk.md
-  
-   
     - Resources: 
       - Off-Chain:
         - Oracle-Core: dev/oc/oracle.md
-      - ErgoTool: dev/stack/ergotool.md
       - Bookmarks: dev/start/resources.md
-      - Tutorials: 
-        - Pi Blockchain Explorer: dev/stack/rpi-blockchain-explorer.md
-        - Integration: dev/Integration/guide.md
-      - Wallets:
-        - Software: dev/wallet/wallets.md
-        - Ledger: dev/wallet/payments/ledger.md
-        - Standards:
-          - UTXO-Set Scanning Wallet API: dev/wallet/standards/eip1.md
-          - Deterministic Wallet Standard: dev/wallet/standards/eip3.md
-          - Cold Wallet: dev/wallet/standards/eip19.md
      
 
   - 💡 ┃  Applications:
